Add: Accordion for taskdetails, routes, moved the app header, container and footer to the routes page

--- a/src/View/Modules/DashBoard/Dashboard.css
+++ b/src/View/Modules/DashBoard/Dashboard.css
@@ -5,7 +5,7 @@
 .task-card {
     margin: 5px;
     padding: 10px;
-    height: 370px;
+    min-height: 370px;
     width: 300px;
     border-radius: 12px;
     /* box-shadow: 4px 4px 4px rgb(151 167 195 / 44%), -4px -4px 4px #fff; */
