--- a/src/View/Modules/DashBoard/Dashboard.css
+++ b/src/View/Modules/DashBoard/Dashboard.css
@@ -20,10 +20,10 @@
 .btn-margin {
     margin: 0 1rem;
 }
-span {
+/* span {
     font-size: 1.2rem;
     font-weight: bold;
-}
+} */
 .card-footer {
     background-color: white;
     display: contents;
